--- a/02-R_Spatial.Rmd
+++ b/02-R_Spatial.Rmd
@@ -6,14 +6,12 @@ The primary packages that deal with these features are [`sf`](https://cran.r-pro
 
 **sf** means "simple feature" while **sp** is short for "spatial." There are pros and cons to both (for example, a lot of other packages depend on `sp`, `sf` works well in `tidyverse`, etc.). However, in my opinion, there is no reason that you can't use both in the same code, if needed. [This website](https://cengel.github.io/R-spatial/intro.html#conceptualizing-spatial-vector-objects-in-r) goes into more detail about these packages and the specifics about objects from these packages. 
 
-**[maybe put some of that detail here]**
-
 ### Loading vector data from a spreadsheet
 
 You will often have a spreadsheet of data that have two columns of latitude and longitude (and potentially other columns for the attributes of these features). 
 
 ```{r loadCSV, echo = T, eval = T}
-sites <- read.csv("data/Sites.csv")
+sites <- read.csv("Data/Examples/Sites.csv")
 head(sites)
 class(sites)
 ```
@@ -54,15 +52,15 @@ This is one of the great things about `sf`: because `sf` objects remain as class
 Now that it's a spatial object, let's plot it and see what it looks like!
 
 ```{r plotBase, eval = T, echo = T}
-plot(sites_sf)
+plot(sites_sf, pch = 16)
 ```
 
-Remember that this object has two attributes: "Site" and "Habitat_Type". So plotting in base R (i.e. using the `plot` function) plots all attributes (it will actually only plot 10 and will give you a warning if there are more than 10 attributes).
+This object only has one attribute ("Site"). If it had more than one, plotting in base R (i.e. using the `plot` function) plots all attributes (it will actually only plot 10 and will give you a warning if there are more than 10 attributes).
 
 To just plot the feature's shape, we can use `st_geometry` to extract the geometry of the vector
 
-```{r plotBase2, eval = F, echo = T}
-plot(st_geometry(sites_sf))
+```{r plotBase2, eval = T, echo = T}
+plot(st_geometry(sites_sf), pch = 16)
 ```
 
 We can also use `ggplot2` to plot `sf` objects. `ggplot2` has a function called `geom_sf`, which makes it easy to visualize `sf` objects with `ggplot2`
@@ -121,7 +119,6 @@ It is not as straightforward to plot an object of class `Spatial` with ggplot2 a
 ```{r pointsGGplot, eval = T, echo = T}
 ggplot(sites) +
   geom_point(aes(x = Longitude, y = Latitude))
-
 ```
 
 ### Loading vector data
@@ -134,7 +131,7 @@ We'll use the function `st_read` which takes two arguments: `dsn` (data source n
 
 ```{r stRead, echo = T, eval = T}
 # Shapefile: freeways in Utah
-fwy_sf <- st_read(dsn = "data/utah_freeway", layer = "utah_freeway")
+fwy_sf <- st_read(dsn = "Data/Examples/utah_freeway", layer = "utah_freeway")
 ```
 You'll note that as we read in a shapefile with `st_read`, it automatically prints out the information about this feature (if you don't want R to print this, put `quiet = FALSE` in the function).
 
@@ -153,7 +150,7 @@ ggplot(fwy_sf) +
 To read in spatial data as an object in the `Spatial` family, we need to use the `rgdal` package. (When you load in `rgdal`, it will also automatically load in `sp`). We'll use the `rgdal` function `readOGR`. This function is similar to `st_read` in that its arguments are `dsn` and `layer` which work exactly the same way as they do in `st_read`
 
 ```{r readOGR, eval = T, echo = T}
-fwy_sp <- readOGR(dsn = "data/utah_freeway", layer = "utah_freeway")
+fwy_sp <- readOGR(dsn = "Data/Examples/utah_freeway", layer = "utah_freeway")
 ```
 
 `read_OGR`, also like `st_read`, will print out some information after reading in the shapefile. If you want to turn this off, you can add `verbose = FALSE` in the function's arguments.
@@ -190,7 +187,7 @@ proj4string(sites_sp_proj)
 
 Note that the coordinates of the WGS84 object compared the coordinates of the projected object are different.
 
-```{r checkCoords, echo = T, eval = F}
+```{r checkCoords, echo = T, eval = T}
 st_geometry(fwy_sf)
 st_geometry(fwy_sf_proj)
 ```
@@ -199,8 +196,6 @@ The coordinates for the object in WGS84 are in lat/long and the units are decima
 
 **REMINDER:** You should **always** double-check the CRS of every feature and object you're working with because you want to make sure everything is projected to the **same** CRS! If they're not, it could result in inaccurate analysis and plotting. Depending on what functions you're using, R may give you a warning or error that the CRS of one feature and another don't match, but it's best not to rely on this and just double-check yourself.
 
-### Creating vector data
-
 ### Saving vector data
 
 Once you've created or modified a spatial object, most likely you want to save it so you can use it later or share with collaborators. There are many files types that can hold spatial data, but the most commonly used are ESRI Shapefile (which can be used in ArcGIS software), KML (which can be used with Google Earth Engine), GeoJSON, and PostgreSQL. If you're curious what other file types are out there, you can use functions `st_drivers()` or `ogrDrivers()` for `sf` and `sp` respectively. In this workshop, I will focus just on ESRI Shapefiles.
@@ -208,7 +203,7 @@ Once you've created or modified a spatial object, most likely you want to save i
 If you've worked with shapefiles before, you've likely noticed that a shapefile is actually a collection of files with the extensions .dbf, .prj, .shp, and .shx. It's often easier to organize and share shapefiles if they're in their own folder. If you don't already have a folder ready for any shapefiles that you're ready to save, you can, of course, manually make one in the File Explorer. But you can also create folders in R! I, personally, often like to do this because it helps streamline my process. To do so we'll use the functions `dir.exists()` to check if the directory (or folder) or not, and if it doesn't we'll use `dir.create()` to create a directory.
 
 ```{r saveData, echo = T, eval = F}
-out_dir <- "data/Sites_shp" # name what you want the folder to be and save it in an object
+out_dir <- "Data/Examples/Sites_shp" # name what you want the folder to be and save it in an object
 
 if(!dir.exists(out_dir)){ # this if statement is basically saying "if out_dir does NOT exist..." (the NOT is from the exclamation mark)
   dir.create(out_dir) # and if out_dir does NOT exist, then dir.create will create it
@@ -252,7 +247,7 @@ class(fwy_sp_to_sf)
 As I mentioned earlier, `sf` works really well with `tidyverse`. If you are familiar with `tidyverse` then you know that one pro is the pipe (`%>%`) which lets you perform multiple functions at once without getting cluttered and hard to read. Functions for `sf` can easily be incorporated into the `tidyverse` piping method as well. For an example, we can load a csv file, covert it to an `sf` object, project it, and save it all at once using the pipes.
 
 ```{r piping, eval = F, echo = T}
-read.csv("data/Sites.csv") %>%
+read.csv("Data/Examples/Sites.csv") %>%
   st_as_sf(coords = c("Longitude", "Latitude"), crs = 4326) %>%
   st_transform(crs = 26912) %>%
   st_write(dsn = "data", layer = "Sites_shp", driver = "ESRI Shapefile")
@@ -260,19 +255,23 @@ read.csv("data/Sites.csv") %>%
 
 Of course, this requires that you already know what the column names for the coordinates are, and this might not be the best example for a series of functions to use with the pipe. But this type of process is a useful tool to know, especially if you are already familiar with and frequently use `tidyverse`.
 
---------------------------------------------------------------------------------------------------
+### Your Turn! {-}
+
+In the attached "worksheet", there are some exerices to help you practice these concepts and functions. Try them out!
+
+---------------------------------------------------------------------------------
 
 ## Rasters 
 
-The primary packages that deal with rasters are [`raster`](https://cran.r-project.org/web/packages/raster/index.html) and [`terra`](https://cran.r-project.org/web/packages/terra/index.html). (Note that `raster` depends on the `sp` package, as it loads `sp` automatically when you load `raster`)
+The primary package that deals with rasters is [`raster`](https://cran.r-project.org/web/packages/raster/index.html). Note that `raster` depends on the `sp` package, as it loads `sp` automatically when you load `raster`. ([`terra`](https://cran.r-project.org/web/packages/terra/index.html) also works with rasters but is funcitonally very similar to `raster`).
 
 ### Load a raster
 
 When you want to load a raster that is saved in a directory, you'll use the (aptly named) function `raster`. When loading a raster that is already saved, the only argument you need is the filename (including the directory and extension)
 
 ```{r loadRaster, eval = T, echo = T}
-r <- raster("data/elevation.tif")
-r
+elev <- raster("Data/Examples/elevation.tif")
+elev
 ```
 When we examine the raster (by simply calling the object like we did above), we get a lot of useful information.
 
@@ -288,33 +287,33 @@ I recommend *always* examining a raster after you load it in to make sure the in
 You can also check all of this information with separate functions:
 
 ```{r checkRastInfo, eval = T, echo = T}
-class(r)
-nrow(r)
-ncol(r)
-ncell(r)
-res(r) # the cell resolution of the raster
-extent(r)
-proj4string(r) # alternatively, we can use crs(r) which will print out a lot more information. proj4string() is sufficient
-summary(values(r)) # put this in summary() so we can get an idea of the spread of values (rather than a list of all of the values themselves)
+class(elev)
+nrow(elev)
+ncol(elev)
+ncell(elev)
+res(elev) # the cell resolution of the raster
+extent(elev)
+proj4string(elev) # alternatively, we can use crs(r) which will print out a lot more information. proj4string() is sufficient
+summary(values(elev)) # put this in summary() so we can get an idea of the spread of values (rather than a list of all of the values themselves)
 ```
 
 We can also plot the raster to check that it looks like what we would expect it to be
 
 ```{r plotRast, eval = T, echo = T}
-plot(r)
+plot(elev)
 ```
 
 We can also plot a raster with `ggplot2`, but we need to do an extra step of converting it to a data frame first. We'll use the base R function `as.data.frame` and we need to be sure to put `xy = TRUE` in the arguments. After we do that, we can use the function `geom_raster()` within `ggplot`. Within the `aes()` function in `geom_raster()`, we need to put the columns that correspond to the x and y locations and what the fill value should represent (in this case, elevation).
 
 ```{r plotRastGGplot, eval = T, echo = T}
-r_df <- as.data.frame(r, xy = TRUE)
-head(r_df) # the data frame of a raster contains columns for the x and y locations and the corresponding cell value
-ggplot(r_df) +
+elev_df <- as.data.frame(elev, xy = TRUE)
+head(elev_df) # the data frame of a raster contains columns for the x and y locations and the corresponding cell value
+ggplot(elev_df) +
   geom_raster(aes(x = x, y = y, fill = elevation))
 ```
 ```{r plotRastGGplotPipe, eval = F, echo = T}
 # You can use the pipe to run this process all at once
-r %>%
+elev %>%
   as.data.frame(xy = TRUE) %>%
   ggplot() +
   geom_raster(aes(x = x, y = y, fill = elevation)) # This requires that you know the column name of the raster values
@@ -322,30 +321,217 @@ r %>%
 
 An important thing to note is that, depending on the size of the raster, it might be too computationally expensive to convert a raster to a data frame and R may give you an error.
 
-(Another reminder that we will not cover how to make these maps look nice, this is just a quick way to check that your raster looks the way that it should)
+(Another reminder that we will not cover how to make these maps look nice, this is just a quick way to check that your raster looks the way that you think it should)
 
-### Project a raster
+#### Loading a raster with more than one band {-}
 
-If you noticed, the CRS of this raster is WGS84 UTM12N, as opposed to NAD83 UTM12N that we used earlier for our vector data. 
+In the example above, the raster we loaded only had one band. Let's try loading in a raster downloaded from [SNODAS](https://nsidc.org/data/g02158) (Snow Data Assimilation System) which has 2 bands: SWE (snow water equivalent) and snow depth. (SNODAS offers daily rasters, and this example raster is from 02-23-2019).
 
-```{r checkRastProj, eval = T, echo = T}
-proj4string(r)
+```{r snow, eval = T, echo = T}
+snow <- raster("Data/Examples/snow_20190223.tif")
+snow
 ```
 
-Like I said before, we want all of our spatial objects to be in the same CRS so that we know that our layers are *truly* stacked on top of the other (for plotting and analysis). For that reason, we need to project this raster to NAD83 UTM12N if we are going to do any comparisons or analysis. To do so, we'll use the function `projectRaster` 
+Notice how it says band 1 (of 2). If there are two bands, why did it only load 1? If we look in the help file for `?raster`, it says that this function creates a `RasterLayer` object, meaning only **1** band. We can also see that there's an argument called `band`, meaning you can specify which band you want to load (and the default is the first band). We *could* load individual bands one-by-one, but that's tedious and, depending how many bands a raster stack has, could be lines and lines of repetitive code. 
 
-```{r}
-r_2 <- projectRaster(r, crs = "+init=epsg:26912")
-r_2
+Instead, we'll use the function `stack()` or `brick()`
+
+```{r snowStk, eval = T, echo = T}
+snow_stack <- stack("Data/Examples/snow_20190223.tif")
+class(snow_stack)
+snow_stack
+
+snow_brick <- brick("Data/Examples/snow_20190223.tif")
+class(snow_brick)
+snow_brick
 ```
 
+When we call the stack and the brick, they look identical besides the class. So what are the differences between a stack and brick? When we look at `?brick`, the help file tells us a few differences. Both a `RasterStack` and `RasterBrick` are multi-layer raster objects, but processing time is shorter with a `RasterBrick`. However. a `RasterBrick` is less flexible than a `RasterStack` because it can only be created from a **single** file, while a `RasterStack` could be fed a list of file names or raster objects and automatically stack them all together. For the purposes of this example, a stack and a brick are essentially identical.
+
+Let's plot the raster stack just to make sure it looks like what we might expect:
+
+```{r plotStk, eval = T, echo = T}
+plot(snow_stack)
+```
+
+Note that plotting a raster stack (or brick) will plot all the layers at once.
+
+The benefit of working with a stack of rasters is that if you need to perform a computation on all of your rasters, you can stack them all togther and the computation will run for every raster layer in the stack. **However**, rasters will only stack together if they have the same **dimensions**, **resolution**, **extent**, and **crs**. 
+
+For example, if we try to stack our elevation raster and stack of snow rasters together:
+```{r stackError, echo = T, eval = F}
+stack(elev, snow_stack)
+```
+
+`Error in compareRaster(x) : different extent`
+
+We get an error that the extents don't match
+
+```{r check, echo = T, eval = T}
+extent(elev)
+extent(snow_stack)
+```
+
+They're very close, but they need to be *exact*. **Why can't I just not stack them and run seperate computations on these rasters?** You can, but your raster cells will be slightly off from each other and may result in inaccurate results and inference.
+
+```{r stack2, fig.cap = "A stack of rasters, showing how each cell would correspond to the ones on top and below", fig.align = 'center', out.width = '50%', echo = F}
+knitr::include_graphics("pictures/raster_stack.png")
+```
+
+In a future section, we'll talk about how to make your rasters line up so you can stack them all together.
 
 ### Create a raster
 
+To create a raster from scratch, we'll use the same function `raster()` but instead of the filename or band as arguments, we'll include the extent and resolution that we want. In this example, let's just make something random.
 
+```{r blankRast, eval = T, echo = T}
+set.seed(1) # this is to make the randomness of runif the same every time 
+x <- runif(1, min = 0, max = 10)
+y <- runif(1, min = 0, max = 10)
+r_new <- raster(xmn = x, xmx = x + 10, ymn = y, ymx = y + 10, resolution = 1)
+r_new
+```
+Note that because we didn't specify the CRS in the arguments, it defaulted to WGS84 lat/long. 
+
+Right now this raster is empty. We can check with the function `values()`
+
+```{r checkVals, eval = T, echo = T}
+head(values(r_new))
+```
+
+We'll use the same function to assign fill the raster with values. If you noticed, there are 100 total cells that need to be filled, and let's fill them with random numbers.
+
+```{r addVals, eval = T, echo = T}
+values(r_new) <- runif(100)
+head(values(r_new))
+r_new
+plot(r_new)
+```
+
+**Why would you need to create a raster from scratch?**
+
+1. If you've written code to perform a calculation or an analysis on a raster, it's good to check that your code is doing what you think it's doing. A good way to test the code is to try it out on a "dummy" raster
+2. If you're asking for help on your code (on [Stack Overflow](https://stackoverflow.com/) for example), it's good practice to either include your data (which is often very difficult to do) or to create a reproducible example. Knowing how to create fake data or fake rasters is useful to know.
+3. We'll see in the next section another useful reason for creating a raster from scratch.
+
+### Project a raster
+
+Let's go back to the elevation raster we loaded earlier. If you noticed, the CRS of this raster is WGS84 UTM12N, as opposed to NAD83 UTM12N that we used earlier for our vector data. 
+
+```{r checkRastProj, eval = T, echo = T}
+proj4string(elev)
+```
+
+If we were going to do some sort of analysis on our vector data and raster data, we want all of our spatial objects to be in the same CRS so that we know that our layers are *truly* stacked on top of the other (for plotting and analysis). For that reason, we need to project this raster to NAD83 UTM12N. To do so, we'll use the function `projectRaster` 
+
+```{r projR, eval = T, echo = T}
+elev_proj <- projectRaster(elev, crs = "+init=epsg:26912")
+elev_proj
+```
+
+Wait, let's take a look at the cell resolution again...
+
+```{r checkRes, eval = T, echo = T}
+res(elev_proj)
+```
+
+This elevation raster came from the [USGS's 3D Elevation Program](https://www.usgs.gov/3d-elevation-program). When I downloaded it, I specified a 1-arcsecond resolution (arcsecond is the unit for long/lat projections), which is equivalent to a 30mX30m resolution in a linear projection (like UTM). So why is the resolution after projecting not actually 30mX30m?
+
+What's happening is that *every* cell needs to be projected, causing the cells to be warped and results in slightly off cell measurements. 
+
+What if we tried specifying the cell resolution in the `projectRaster` function?
+
+```{r proj2, echo = T, eval = T}
+elev_proj_2 <- projectRaster(elev, crs = "+init=epsg:26912", res = 30)
+elev_proj_2
+```
+
+We could do this. But can we be sure that all of the cells in this raster would align one-to-one in all of our other rasters? And if they don't align, can we be sure our analysis and computation on all of our rasters would be correct?
+
+```{r proj3_temp, echo = T, eval = T}
+snow_proj <- projectRaster(snow_stack, crs = "+init=epsg:26912", res = 30)
+snow_proj
+```
+
+```{r stackTest, echo = T, eval = F}
+stack(elev_proj_2, snow_proj)
+```
+`Error in compareRaster(x) : different extent`
+
+Furthermore, there's something else happening when rasters are projected. Let's double-check the help file, `?projectRaster`. It looks like there's another argument called `method` that defaults to `"bilinear"`. If you scroll down to the details of `method`, it says it can either take `ngb` (or nearest neighbor) or `bilinear` (or bilinear interpolation). Ok...well what does that mean? Bilinear interpretation is basically a way of estimating a value in between two other values. Nearest neighbor essentially picks the exact value of a point that's closest to the focal point. 
+
+This essentially means that when you use `projectRaster`, the raster cells are being warped and shifted slightly, so R can't just simply move the entire raster over, but it needs to know how to estimate the cell values in their new location and new resolution. So should it estimate a value in between two cell values or pick the actual value of the cell it's closest to? Either way, this will slighlty adjust the data:
+
+```{r bilinVsNGB, echo = T, eval = T}
+elev_bilinear <- projectRaster(elev, crs = "+init=epsg:26912", res = 30, method = "bilinear")
+elev_ngb <- projectRaster(elev, crs = "+init=epsg:26912", res = 30, method = "ngb")
+
+# check the spread of values in the orginal raster
+summary(values(elev))
+
+# check the spread of values in the raster estimated with bilinear 
+summary(values(elev_bilinear))
+
+# check the spread of values in the raster estimated with nearest neighbor 
+summary(values(elev_ngb))
+```
+
+There's no right or wrong answer on which method you pick. The `projectRaster` help file recommends using `bilinear` for continuous rasters (like this elevation raster we're working with) and `ngb` for categorical rasters (in fact, you probably *shouldn't* use `bilinear` for categorical rasters because it will pick a value that's in between two values which aren't real numbers, but are actually stand-ins for a category). In my work I use `ngb` for continous rasters as well, so I'm going to use that for these examples, but `bilinear` is valid to use as well. (Again, as with everything, it depends on your analysis and your system.)
+
+One thing to keep in mind with projecting rasters is that **you should not over-project and re-sample your rasters over and over again**. Imagine printing a picture and then making a copy of that printed picture. And then making a copy of the copy. And then a copy of that *that* copy. Over and over again. Eventually you end up with a warped image that only vaguely resembles the original image. A similar thing can happen if you project and re-sample your rasters even more than once. 
+
+In contrast, there is no issue with projecting and re-projecting your vector data over and over again. 
+
+Ok, so now that we know the dangers of projecting rasters, what **is** the best way project a raster? I recommend (and `projectRaster` also recommends) creating a template raster and using that template as a mold for all of your rasters. (*hint: this is where it comes in handy to know how to make a blank raster*)
+
+So let's create a template raster with our desired CRS, cell resolution, and extent. To choose the cell resolution, I recommend picking your set of rasters with the smallest resolution (but keep in mind that this will affect disk space and computation time, so again there's no right or wrong answer). In this case, elevation (30mX30m) has a smaller resolution than snow (1kmX1km). The extent should be the min and max area of focus, such as your study area.
+
+```{r createTemp, eval = T, echo = T}
+# create a blank raster with desired parameters. We don't need to add any values to it
+template <- raster(crs = "+init=epsg:26912", resolution = c(30, 30),
+                   xmn = 228560, xmx = 238910, ymn = 4032145, ymx = 4043815)
+template
+
+# use the template to project our rasters
+# from = focal raster
+# to = the raster object with the desired parameters
+# method = the method to compute new values 
+elev_proj_template <- projectRaster(from = elev, to = template, method = "ngb")
+snow_proj_template <- projectRaster(from = snow_stack, to = template, method = "ngb")
+elev_proj_template
+snow_proj_template
+
+# now we can stack them! This way we know for sure that all cells align with every layer
+stack <- stack(elev_proj_template, snow_proj_template)
+stack
+plot(stack)
+```
+
+Right now the bands' names (besides "elevation") are not very descriptive, but we can change their names so that we can more easily remember which band is which. In this case, band 1 is elevation, band 2 is SWE, and band 3 is snow depth. To change the band names, we'll use the function `names()`
+
+```{r changeNames, eval = T, echo = T}
+names(stack) <- c("elevation", "swe", "snow_depth")
+stack
+```
 
 ### Save a raster
 
+To save a raster we'll use the function `writeRaster`. We need to include the raster object that we're saving, the full file name (including the directory **but not the file extension**), and the format (i.e. the file type) we want to save the raster as.
 
+The two most common formats are `raster` (which creates two files with the extensions .gri and .grd) & `GTiff` (GeoTIFF, which creates a file with the extension .tif). I personally use GeoTIFF's, but a pro for using `raster` is that it saves the name of the raster layers that are in a stack.
 
+(You can also check `writeFormats()` for other formats to save a raster.)
 
+```{r saveR, eval = F, echo = T}
+writeRaster(stack, "Data/Examples/elev_snow_stack", format = "GTIFF")
+```
+
+Note that some raster functions have optional arguments to add filenames and formats so that the funciton will automatically save the output after performing its function.
+
+### Your Turn! {-}
+
+In the attached "worksheet", there are some exerices to help you practice these concepts and functions. Try them out!
+
+---------------------------------------------------------------------------------
+
+Now that we know the basics of working with vector and raster data in R, let's learn how to manipulate and perform computations on these spatial objects.
