--- a/index.Rmd
+++ b/index.Rmd
@@ -1,16 +1,14 @@
 --- 
 title: "R Spatial Workshop"
 author: "Ronan Hart"
-date: "`r Sys.Date()`"
+date: "2022-04-06"
 site: bookdown::bookdown_site
 documentclass: book
 bibliography: [book.bib, packages.bib]
 # url: your book url like https://bookdown.org/yihui/bookdown
 # cover-image: path to the social sharing image like images/cover.jpg
 description: |
-  This is a minimal example of using the bookdown package to write a book.
-  The HTML output format for this example is bookdown::gitbook,
-  set in the _output.yml file.
+  This workshop was created for USU's Ecology Center R workshops on R Spatial.
 link-citations: yes
 github-repo: ronanhart/R_spatial_workshop
 ---
